[package]
name = "update_op_creds"
version = "0.1.0"
authors = ["Jessica Rodriguez <dev@jessicarod.com>"]
description = "Update credentials in 1Password"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jessicarod7/update_op_creds"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
